--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,12 @@ branches:
 before_script:
   - npm install -g @angular/cli
 script:
-- ng build --prod --base-href https://github.com/tomazn/travis-firebase.git
+  - ng build --prod --base-href https://github.com/tomazn/travis-firebase.git
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: dist/affluences-bouffe
+  on:
+    branch: master
